--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,17 @@
 .App {
-  min-height: 100vh;
+  min-height: 120vh;
   display: flex;
   flex-direction: column;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
