--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two:ital,wght@1,700&family=Poppins&display=swap');
+
 .App {
+  font-family: 'Poppins', sans-serif;
   min-height: 100vh;
   overflow-x: hidden;
   display: flex;
